[gd_scene load_steps=10 format=3 uid="uid://b1r37xlv72lnf"]

[ext_resource type="Script" uid="uid://d2rswpfdl28b2" path="res://scripts/main_ui.gd" id="1_2ppmm"]
[ext_resource type="Texture2D" uid="uid://inwjj0lddvkd" path="res://assets/sprites/units/crystal.png" id="2_w37m7"]
[ext_resource type="Texture2D" uid="uid://dek778mhsdpu8" path="res://assets/resources/damage_gradient.tres" id="3_e6fyy"]

[sub_resource type="LabelSettings" id="LabelSettings_j6a7c"]
font_size = 100
font_color = Color(1, 0.8, 0.5176471, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ktt6o"]
font_size = 36
font_color = Color(0.97593325, 0.78164965, 0.49972385, 1)

[sub_resource type="LabelSettings" id="LabelSettings_513t2"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_e6fyy"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_scoti"]
font_size = 96
font_color = Color(0.82, 0.62197, 0.2542, 1)

[sub_resource type="LabelSettings" id="LabelSettings_i1gbh"]
font_size = 64
font_color = Color(0.78039217, 0.7607843, 0.44705883, 1)

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_2ppmm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Health" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Spells" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CoinLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -500.0
offset_top = 5.0
offset_right = -377.25
offset_bottom = 28.0
grow_horizontal = 0
scale = Vector2(4, 4)
text = "0$"
horizontal_alignment = 2

[node name="CardRewards" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel2" type="Label" parent="CardRewards"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "CHOOSE"
label_settings = SubResource("LabelSettings_j6a7c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cards" type="HBoxContainer" parent="CardRewards"]
layout_mode = 2

[node name="Shop" type="HBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -4.0
offset_right = 10.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeButton" type="Control" parent="Shop"]
custom_minimum_size = Vector2(350, 450)
layout_mode = 2
mouse_filter = 1

[node name="Button" type="Button" parent="Shop/UpgradeButton"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/UpgradeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -206.0
offset_right = 150.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="title" type="Label" parent="Shop/UpgradeButton/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "Upgrade Spell"
label_settings = SubResource("LabelSettings_ktt6o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Shop/UpgradeButton/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_w37m7")

[node name="description" type="Label" parent="Shop/UpgradeButton/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "Remove a dance step from a spell."
label_settings = SubResource("LabelSettings_513t2")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="cost" type="Label" parent="Shop/UpgradeButton/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "Click an arrow"
label_settings = SubResource("LabelSettings_e6fyy")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="UpgradeButton2" type="Control" parent="Shop"]
custom_minimum_size = Vector2(350, 450)
layout_mode = 2

[node name="Button" type="Button" parent="Shop/UpgradeButton2"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/UpgradeButton2"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -210.0
offset_right = 150.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="title" type="Label" parent="Shop/UpgradeButton2/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "Upgrade Spell"
label_settings = SubResource("LabelSettings_ktt6o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Shop/UpgradeButton2/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_w37m7")

[node name="description" type="Label" parent="Shop/UpgradeButton2/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "Replace a dance step with a wildcard free any-direction dance step."
label_settings = SubResource("LabelSettings_513t2")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="cost" type="Label" parent="Shop/UpgradeButton2/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "to see the price."
label_settings = SubResource("LabelSettings_e6fyy")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DamageFlash" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_e6fyy")

[node name="PickupInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="PickupName" type="Label" parent="PickupInfo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -242.0
offset_right = 242.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Some Cool Item"
label_settings = SubResource("LabelSettings_scoti")
horizontal_alignment = 1

[node name="PickupDescription" type="Label" parent="PickupInfo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -330.5
offset_top = -88.0
offset_right = 330.5
grow_horizontal = 2
grow_vertical = 0
text = "Does something cool."
label_settings = SubResource("LabelSettings_i1gbh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Items" type="GridContainer" parent="."]
custom_minimum_size = Vector2(128, 128)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 100.0
offset_bottom = 228.0
grow_horizontal = 0
columns = 3

[node name="SpellFlash" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="SpellFlash"]
layout_mode = 2

[connection signal="pressed" from="Shop/UpgradeButton/Button" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="Shop/UpgradeButton2/Button" to="." method="_on_upgrade_button_2_pressed"]
